@@ -1,3 +1,7 @@
+2010-02-14  Tiger Soldier  <tigersoldi@gmail.com>
+
+	* src/ol_player_exaile03.c (ol_player_exaile03_get_status): FIX: Support Exaile 0.3.1
+
 2010-02-11  Tiger Soldier  <tigersoldi@gmail.com>
 
 	* src/ol_notify.c : Fix: Notification doesn't display
